app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_delegator__tests__ui_permissionless_delegator-2.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_delegator.rs
expression: reduced
---
[
    "AddPermlessDelega": "Transaction",
    "Validator": "NodeID-2ZbTY9GatRTrfinAoYiYLcf6CvrPAUYgo",
    "Start time": "1970-01-01 03:25:45 UTC",
    "End time": "1970-07-20 03:25:45 UTC",
    "Total stake(AVAX)": "2000",
    "SubnetID": "11111111111111111111111111111111LpoYY",
    "Stake": "2000 AVAX to ",
    "Address": "avax1g32kvaugnx4tk3z4vemc3xd2hdz92enh972wxr",
    "Rewards to": "avax1g32kvaugnx4tk3z4vemc3xd2hdz92enh972wxr",
    "Fee(AVAX)": "0",
]
